# Kyriotes-CSK2

./: .gitignore  .gitmodules  .lia.cache  .rekurnignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  USAGE.md  rekurn.config.json
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
.rekurn/: config  index
docs/: ARC-Spec-Sheet.md  ARC-Spec-v0.1.md  Kyriotes-CSK2-Spec-Sheet.md  PUBLISHING.md  README.md  SWDD.md  USAGE.md  UsageExample.md
docs/verification/: ADD_EPOCH_WRAPPER_MECHANICAL_REFINEMENT.md  CAPABILITY_TREE_MECHANICAL_REFINEMENT.md  CAPABILITY_TREE_WITNESS_SOUNDNESS.md  CONTEXT_HASH_MECHANICAL_REFINEMENT.md  DECODE_ARC_OBJECT_MECHANICAL_REFINEMENT.md  DECODE_KYRIOTES_CSK2_OBJECT_MECHANICAL_REFINEMENT.md  ENCODE_ARC_OBJECT_MECHANICAL_REFINEMENT.md  ENCODE_KYRIOTES_CSK2_OBJECT_MECHANICAL_REFINEMENT.md  FULL_MECHANICAL_PROOF_EQUIVALENCE_PLAN.md  MLKEM_FORMOSA_ADAPTER.md  MLKEM_FORMOSA_ADAPTER_INVENTORY.md  MLKEM_NUMERIC_POLICY.md  OPEN_MECHANICAL_REFINEMENT.md  PRIMITIVE_BOUNDARY.md  ROTATE_EPOCH_FULL_MECHANICAL_REFINEMENT.md  ROTATE_EPOCH_MECHANICAL_REFINEMENT.md  RUST_COQ_REFINEMENT_PLAN.md  RUST_FULL_MECHANICAL_PROOF_GATE.md  RUST_MECHANICAL_REFINEMENT_PLAN.md  SEAL_MECHANICAL_REFINEMENT.md  SEAL_OPEN_AEAD_AAD_CONTRACT_DISCHARGE.md  SEAL_OPEN_CRYPTO_CONTRACT_DISCHARGE.md  SEAL_OPEN_CRYPTO_SEMANTIC_CONTRACTS.md  SEAL_OPEN_ENCODE_DECODE_ROUNDTRIP.md  SEAL_OPEN_MODEL_CRYPTO_EQUIVALENCE.md  SECURITY_MODEL.md  TRANSPARENCY_MECHANICAL_REFINEMENT.md  TRANSPARENCY_MERKLE_SOUNDNESS.md  VERIFY_MECHANICAL_REFINEMENT.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_aad_binding.rs  fuzz_add_epoch_wrapper_and_commit_semantic.rs  fuzz_authority_rotate.rs  fuzz_canonical_codecs.rs  fuzz_capability_decode.rs  fuzz_compromise_boundary_semantic.rs  fuzz_compromise_notice.rs  fuzz_cross_system_lifecycle_stress.rs  fuzz_decode_arc_object.rs  fuzz_decode_kyriotes_csk2_object.rs  fuzz_decode_profile.rs  fuzz_delegation.rs  fuzz_delegation_chain_semantic.rs  fuzz_epoch_rotation_freshness_semantic.rs  fuzz_full_lifecycle.rs  fuzz_hybrid_kem.rs  fuzz_merkle_proofs.rs  fuzz_open.rs  fuzz_open_and_reseal_and_commit_semantic.rs  fuzz_open_and_reseal_semantic.rs  fuzz_reseal.rs  fuzz_revoke_capability_and_commit_semantic.rs  fuzz_rewrap.rs  fuzz_rights_policy.rs  fuzz_rotate_epoch_and_commit_semantic.rs  fuzz_seal_and_commit.rs  fuzz_temporal_policy.rs  fuzz_transparency.rs  fuzz_transparency_state_machine.rs  fuzz_tsig.rs  fuzz_tsig_cert_chain_semantic.rs  fuzz_verify.rs  fuzz_verify_and_open.rs
fuzz/src/: lib.rs
proofs/coq/: .ArcAuthority.aux  .ArcCryptoReduction.aux  .ArcDelegationProofs.aux  .ArcMerkle.aux  .ArcPolicy.aux  .ArcSecurityGame.aux  .ArcStressProofs.aux  .ArcTheorems.aux  .ArcTypes.aux  .ArcVerify.aux  .lia.cache  ArcAbstractInvariantCompleteness.v  ArcAddEpochWrapperRustRefinement.v  ArcAdversaryGame.v  ArcAssumptionReductionProofs.v  ArcAuthority.glob  ArcAuthority.v  ArcAuthority.vo  ArcCapabilityTreeRustRefinement.v  ArcConcreteMerkleProofs.v  ArcContextHashRustRefinement.v  ArcCryptoReduction.glob  ArcCryptoReduction.v  ArcCryptoReduction.vo  ArcCryptoReductionCompleteness.v  ArcDecodeArcObjectRustRefinement.v  ArcDelegationProofs.glob  ArcDelegationProofs.v  ArcDelegationProofs.vo  ArcDesignModelCompleteness.v  ArcEncodeArcObjectRustRefinement.v  ArcEncodingProofs.v  ArcEndToEndTheorems.v  ArcFullMechanicalProofEquivalence.v  ArcInvalidTransitionProofs.v  ArcKemAeadAssumptions.v  ArcLifecycleProofs.v  ArcMasterInvariantProofs.v  ArcMerkle.glob  ArcMerkle.v  (+46 more)
proofs/easycrypt/: .gitignore  Makefile
scripts/refinement/: add_epoch_wrapper_full_proof_gate.py  capability_tree_full_proof_gate.py  check_add_epoch_wrapper_surface.py  check_capability_tree_surface.py  check_encode_decode_surface.py  check_open_surface.py  check_rotate_epoch_full_surface.py  check_rotate_epoch_surface.py  check_seal_surface.py  check_transparency_surface.py  check_verify_surface.py  context_hash_full_proof_gate.py  decode_arc_object_full_proof_gate.py  decode_kyriotes_csk2_object_full_proof_gate.py  encode_arc_object_full_proof_gate.py  encode_kyriotes_csk2_object_full_proof_gate.py  full_mechanical_proof_gate.py  generate_add_epoch_wrapper_vectors.py  generate_capability_tree_vectors.py  generate_context_hash_vectors.py  generate_decode_arc_object_vectors.py  generate_decode_kyriotes_csk2_object_vectors.py  generate_encode_arc_object_vectors.py  generate_encode_kyriotes_csk2_object_vectors.py  generate_mechanical_refinement_inventory.py  generate_open_vectors.py  generate_refinement_evidence.py  generate_rotate_epoch_full_vectors.py  generate_rotate_epoch_vectors.py  generate_seal_vectors.py  open_full_proof_gate.py  (+7 more)
src/: kani_add_epoch_wrapper_equivalence.rs  kani_capability_tree_equivalence.rs  kani_context_hash_equivalence.rs  kani_decode_arc_object_equivalence.rs  kani_encode_arc_object_equivalence.rs  kani_rotate_epoch_equivalence.rs  kani_rotate_epoch_full_equivalence.rs  kani_seal_equivalence.rs  kani_transparency_equivalence.rs  lib.rs
tests/: arc_add_wrapper_and_commit.rs  arc_async_revocation.rs  arc_async_transparency.rs  arc_capability_tree.rs  arc_chain_hash_integration.rs  arc_compromise_notice.rs  arc_compromise_open.rs  arc_crypto_verifier.rs  arc_delegation.rs  arc_epoch_rotation.rs  arc_flow.rs  arc_guards.rs  arc_issue.rs  arc_log_chain.rs  arc_multi_wrapper.rs  arc_parent_stamp.rs  arc_pq_kem.rs  arc_reseal.rs  arc_reseal_required_e2e.rs  arc_revocation.rs  arc_rewrap_spec.rs  arc_rights.rs  arc_seal_and_commit.rs  arc_seal_open_crypto_semantic.rs  arc_temporal.rs  arc_tsig.rs  arc_tsig_verifier.rs  arc_verify.rs  arc_wire.rs  arc_wire_capability_tsig.rs  decode_arc_object_refinement.rs  decode_kyriotes_csk2_object_refinement.rs  kyriotes_csk2_add_wrapper_and_commit.rs  kyriotes_csk2_async_revocation.rs  kyriotes_csk2_async_transparency.rs  kyriotes_csk2_capability_tree.rs  kyriotes_csk2_chain_hash_integration.rs  kyriotes_csk2_compromise_notice.rs  kyriotes_csk2_compromise_open.rs  kyriotes_csk2_crypto_verifier.rs  (+23 more)
(+260 files in other folders)
