[package]
name = "kyriotes-csk2"
version = "0.1.2"
edition = "2024"
rust-version = "1.87"
license = "MIT"
readme = "README.md"
repository = "https://github.com/reeveskeefe/Kyriotēs-CSK2"
keywords = ["encryption", "capabilities", "access-control", "aead", "kem"]
categories = ["cryptography", "authentication", "data-structures"]
# crates.io requires a non-empty description before publish. Fill this in manually.
description = "Kyriotēs-CSK2 makes encrypted data require permission, not just a key. Even if someone has the decryption key, Kyriotēs-CSK2 can still refuse access unless the current authority proof says they are allowed to open that exact object."
include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
    "Kyriotes-CSK2LogoRectangular.png",
    "Kyriotēs-CSK2LogoSquare.png",
    "docs/**/*.md",
    "src/**/*.rs",
    "tests/**/*.rs",
]

[lib]
name = "kyriotes_csk2"

[features]
default = []
insecure-stub-verifier = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[dependencies]
async-trait = "0.1"
chacha20poly1305 = "0.10"
ed25519-dalek = "2.1"
hkdf = "0.12"
ml-kem = { version = "0.3.2", features = ["getrandom"] }
rand = "0.8"
rand_core = "0.10"
sha2 = "0.10"
thiserror = "1.0"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
